--- a/packages/reference/client/scss/60_components/_c-shipping-method.scss
+++ b/packages/reference/client/scss/60_components/_c-shipping-method.scss
@@ -16,7 +16,6 @@ $input-radio-spacing: 8px;
   }
 
   &__header {
-    padding-right: 4px;
     margin: auto;
     width: 100%;
 
