--- a/packages/reference/client/scss/60_components/_c-step-indicators.scss
+++ b/packages/reference/client/scss/60_components/_c-step-indicators.scss
@@ -1,63 +1,52 @@
 .c-step-indicators {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  vertical-align: top;
-
-  @include breakpoint(desktop) {
-    width: 80%;
-  }
-
-  &__logo {
-    width: 100%;
-    display: block;
-    margin-top: $global-spacing-unit;
-    text-align: center;
-  }
 
   &__steps {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
-    display: inline-block;
-    text-align: center;
-    margin-top: $global-spacing-unit-small;
     border-bottom: 1px solid $border-default;
 
     @include breakpoint(desktop) {
-      width: 60%;
-      display: block;
-      margin: $global-spacing-unit-small auto 0 auto;
+      width: 70%;
       border-bottom: none;
     }
 
     .c-step-indicator {
+      display: flex;
+      flex-direction: column;
       color: $text-default;
-      margin: 0 $global-spacing-unit-tiny;
+      margin: $global-spacing-unit-small 0;
 
       a, a:link, a:hover, a:visited {
         color: inherit;
       }
 
       &__line {
-        display: none;
-
         &--completed {
-          display: block;
-          position: fixed;
+          display: flex;
+          position: static;
           margin-top: -$global-spacing-unit;
           margin-left: $global-spacing-unit;
-          width: 90px;
+          margin-bottom: $global-spacing-unit;
+          width: 100%;
           z-index: -999;
           border: 1px solid $background-positive;
 
           @include breakpoint(desktop) {
-            position: static;
             margin-left: ($global-spacing-unit-tiny * 15);
-            width: 100%;
+            margin-bottom: 0;
           }
         }
       }
 
       &__position {
-        display: block;
-        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-self: center;
         height: 45px;
         width: 45px;
         line-height: 45px;
@@ -77,7 +66,7 @@
       }
 
       &__subtitle {
-        padding: $global-spacing-unit-tiny 0 $global-spacing-unit-small;
+        padding-top: $global-spacing-unit-tiny;
         font-size: 0.6em;
         width: 100%;
         color: black;
